fix center align header

--- a/stylesheets/mtvillwock-stylesheet.css
+++ b/stylesheets/mtvillwock-stylesheet.css
@@ -71,6 +71,7 @@ a:visited {
   margin-right: auto;
   margin-top: 20px;
   position: relative;
+  text-align: center;
   width: 85%;
 }
 
